--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
         "@biomejs/biome": "^1.8.3",
         "typescript": "^5.8.3",
         "vite": "^6.3.5"
-    }
+    },
+    "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
 }
