--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
         "typescript": "^5.8.3",
         "vite": "^6.3.5"
     },
-    "packageManager": "pnpm@8.15.6+sha256.01c01eeb990e379b31ef19c03e9d06a14afa5250b82e81303f88721c99ff2e6f"
+    "packageManager": "yarn@4.9.2"
 }
